--- a/Dota2App/Dota2App/en.lproj/MainStoryboard_iPad.storyboard
+++ b/Dota2App/Dota2App/en.lproj/MainStoryboard_iPad.storyboard
@@ -664,6 +664,7 @@
                                 <rect key="frame" x="0.0" y="0.0" width="768" height="960"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <color key="backgroundColor" red="0.21482364749999999" green="0.22288804030000001" blue="0.23148777170000001" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="separatorColor" red="0.59999999999999998" green="0.59999999999999998" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
                                 <prototypes>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="gray" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="AbilityCell" rowHeight="90" id="ZVf-dp-FGK" customClass="AbilityCell">
                                         <rect key="frame" x="0.0" y="22" width="768" height="90"/>
@@ -673,45 +674,35 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="ABILITY" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="9" adjustsLetterSpacingToFitWidth="YES" id="Myg-nR-lJX">
-                                                    <rect key="frame" x="20" y="7" width="488" height="21"/>
+                                                    <rect key="frame" x="106" y="7" width="488" height="21"/>
                                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxX="YES" heightSizable="YES"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                                    <color key="highlightedColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                 </label>
                                                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="MP" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="9" adjustsLetterSpacingToFitWidth="YES" id="vlF-Z0-Epy">
-                                                    <rect key="frame" x="48" y="36" width="444" height="21"/>
+                                                    <rect key="frame" x="134" y="36" width="444" height="21"/>
                                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxX="YES" heightSizable="YES"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                                    <color key="highlightedColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                                 </label>
                                                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="CD" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="9" adjustsLetterSpacingToFitWidth="YES" id="0lg-KC-9CJ">
-                                                    <rect key="frame" x="48" y="63" width="444" height="21"/>
+                                                    <rect key="frame" x="134" y="63" width="444" height="21"/>
                                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxX="YES" heightSizable="YES"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                                    <color key="highlightedColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                                 </label>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" id="EWB-fl-CWT">
-                                                    <rect key="frame" x="608" y="0.0" width="120" height="89"/>
+                                                    <rect key="frame" x="20" y="10" width="69" height="69"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" heightSizable="YES"/>
                                                 </imageView>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="mp.png" id="uNo-8i-gfK">
-                                                    <rect key="frame" x="20" y="36" width="20" height="20"/>
+                                                    <rect key="frame" x="106" y="36" width="20" height="20"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 </imageView>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="cd.png" id="XsP-MI-Jq9">
-                                                    <rect key="frame" x="20" y="64" width="20" height="20"/>
+                                                    <rect key="frame" x="106" y="64" width="20" height="20"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 </imageView>
-                                                <label hidden="YES" opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Passive Ability" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="DI7-bQ-2c5">
-                                                    <rect key="frame" x="20" y="43" width="188" height="21"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
-                                                    <color key="highlightedColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                                </label>
                                             </subviews>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         </view>
@@ -721,7 +712,6 @@
                                             <outlet property="cd" destination="0lg-KC-9CJ" id="ozX-Zw-teA"/>
                                             <outlet property="cdIcon" destination="XsP-MI-Jq9" id="wHi-5N-VlE"/>
                                             <outlet property="icon" destination="EWB-fl-CWT" id="e3w-Mv-86z"/>
-                                            <outlet property="isPassiveLabel" destination="DI7-bQ-2c5" id="6tS-11-0F3"/>
                                             <outlet property="mp" destination="vlF-Z0-Epy" id="Q5I-ej-NJg"/>
                                             <outlet property="mpIcon" destination="uNo-8i-gfK" id="VkL-bk-f8h"/>
                                             <segue destination="j3C-pY-Kim" kind="push" identifier="AbilityDetail" id="iwd-cF-ojM"/>
